alignment issue fix

--- a/style.css
+++ b/style.css
@@ -352,7 +352,7 @@ h3 {
   width: 100%;
   text-align: center;
   margin-top: 10px;
-  margin-right: 145px; 
+  margin-right: 350px; 
 }
 
 /* Divider line for third project */
